# ogs5py

./: .coveragerc  .gitignore  .travis.yml  .zenodo.json  AUTHORS.md  CHANGELOG.md  CITATION.bib  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  appveyor.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml
docs/: Makefile  requirements.txt
docs/source/: api.rst  conf.py  contents.rst  fileclasses.asc.rst  fileclasses.base.rst  fileclasses.bc.rst  fileclasses.cct.rst  fileclasses.ddc.rst  fileclasses.fct.rst  fileclasses.gem.rst  fileclasses.gli.generator.rst  fileclasses.gli.rst  fileclasses.ic.rst  fileclasses.krc.rst  fileclasses.mcp.rst  fileclasses.mfp.rst  fileclasses.mmp.rst  fileclasses.mpd.rst  fileclasses.msh.generator.rst  fileclasses.msh.rst  fileclasses.msp.rst  fileclasses.num.rst  fileclasses.out.rst  fileclasses.pcs.rst  fileclasses.pct.rst  fileclasses.pqc.rst  fileclasses.rei.rst  fileclasses.rfd.rst  fileclasses.rst  fileclasses.st.rst  fileclasses.tim.rst  index.rst  ogs.rst  ogs_base.rst  package.rst  reader.rst  tools.download.rst  tools.output.rst  tools.rst  tools.script.rst  (+7 more)
docs/source/_templates/: layout.html
examples/: 01_pump_test.py  02_pump_test_het_3D.py  03_pygmsh_generated.py
examples/pump_test/: model.ic
ogs5model/: bensan-dat.lst  model.bc  model.cct  model.gem  model.gli  model.ic  model.mcp  model.mfp  model.mmp  model.msh  model.msp  model.num  model.out  model.pcs  model.rfd  model.st  model.tim  model_2018-11-13_16-42-32_log.txt
ogs5py/: __init__.py  _version.py  ogs.py
ogs5py/fileclasses/: __init__.py  base.py
ogs5py/fileclasses/asc/: __init__.py  core.py
ogs5py/fileclasses/bc/: __init__.py  core.py
ogs5py/fileclasses/cct/: __init__.py  core.py
ogs5py/fileclasses/ddc/: __init__.py  core.py
ogs5py/fileclasses/fct/: __init__.py  core.py
ogs5py/fileclasses/gem/: __init__.py  core.py
ogs5py/fileclasses/gli/: __init__.py  checker.py  core.py  generator.py  tools.py
ogs5py/fileclasses/ic/: __init__.py  core.py
ogs5py/fileclasses/krc/: __init__.py  core.py
ogs5py/fileclasses/mcp/: __init__.py  core.py
ogs5py/fileclasses/mfp/: __init__.py  core.py
ogs5py/fileclasses/mmp/: __init__.py  core.py
ogs5py/fileclasses/mpd/: __init__.py  core.py
ogs5py/fileclasses/msh/: __init__.py  checker.py  core.py  generator.py  gmsh.py  helpers.py  msh_io.py  tools.py  viewer.py
ogs5py/fileclasses/msp/: __init__.py  core.py
ogs5py/fileclasses/num/: __init__.py  core.py
ogs5py/fileclasses/pcs/: __init__.py  core.py
ogs5py/fileclasses/pct/: __init__.py  core.py
ogs5py/fileclasses/pqc/: __init__.py  core.py
ogs5py/fileclasses/rei/: __init__.py  core.py
ogs5py/fileclasses/rfd/: __init__.py  core.py
ogs5py/fileclasses/st/: __init__.py  core.py
ogs5py/fileclasses/tim/: __init__.py  core.py
ogs5py/reader/: __init__.py  _types.py  reader.py  techelper.py  tools.py  vtkhelper.py
ogs5py/tools/: __init__.py  _types.py  download.py  output.py  script.py  tools.py  types.py  vtk_viewer.py
paper/: compile  paper.bib  paper.md
src/ogs5py/: __init__.py  ogs.py
src/ogs5py/fileclasses/: __init__.py  base.py
src/ogs5py/fileclasses/asc/: __init__.py
src/ogs5py/fileclasses/bc/: core.py
src/ogs5py/fileclasses/cct/: __init__.py
src/ogs5py/fileclasses/ddc/: __init__.py
src/ogs5py/fileclasses/fct/: __init__.py
src/ogs5py/fileclasses/gem/: __init__.py  core.py
src/ogs5py/fileclasses/gli/: __init__.py  checker.py  core.py  generator.py  tools.py
src/ogs5py/fileclasses/krc/: __init__.py
src/ogs5py/fileclasses/mcp/: __init__.py  core.py
src/ogs5py/fileclasses/mfp/: __init__.py  core.py
src/ogs5py/fileclasses/mmp/: core.py
src/ogs5py/fileclasses/mpd/: core.py
src/ogs5py/fileclasses/msh/: __init__.py  checker.py  core.py  generator.py  gmsh.py  msh_io.py  tools.py  viewer.py
src/ogs5py/fileclasses/num/: core.py
src/ogs5py/fileclasses/pcs/: core.py
src/ogs5py/fileclasses/pct/: __init__.py  core.py
src/ogs5py/fileclasses/pqc/: __init__.py  core.py
src/ogs5py/fileclasses/rfd/: core.py
src/ogs5py/fileclasses/st/: core.py
src/ogs5py/fileclasses/tim/: core.py
src/ogs5py/reader/: __init__.py  tools.py  vtkhelper.py
src/ogs5py/tools/: __init__.py  download.py  output.py  script.py  tools.py  types.py  vtk_viewer.py
tests/: test_ogs5py.py
