[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "setuptools_scm[toml]>=3.5",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "ogs5py/_version.py"
write_to_template = "__version__ = '{version}'"
local_scheme = "no-local-version"
fallback_version = "0.0.0.dev0"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79

[tool.black]
exclude = "_version.py"
line-length = 79
target-version = [
    "py36",
    "py37",
    "py38",
]

[tool.coverage]
    [tool.coverage.run]
    source = ["ogs5py"]
    omit = [
        "*docs*",
        "*examples*",
        "*tests*",
    ]

    [tool.coverage.report]
    exclude_lines = [
        "pragma: no cover",
        "if __name__ == '__main__':",
        "def __repr__",
        "def __str__",
    ]
