[metadata]
name = ogs5py
description = ogs5py: a python API for OpenGeoSys5
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GeoStat-Framework/ogs5py
author = Sebastian Müller, Falk Heße
author_email = info@geostat-framework.org
maintainer = Sebastian Müller
maintainer_email = info@geostat-framework.org
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: Unix
    Operating System :: Microsoft
    Operating System :: MacOS
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: GIS
    Topic :: Scientific/Engineering :: Hydrology
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Utilities
project_urls =
    Homepage = https://geostat-framework.org/#ogs5py
    Documentation = https://ogs5py.readthedocs.io
    Source = https://github.com/GeoStat-Framework/ogs5py
    Tracker = https://github.com/GeoStat-Framework/ogs5py/issues
    Changelog = https://github.com/GeoStat-Framework/ogs5py/blob/main/CHANGELOG.md
    Conda-Forge = https://anaconda.org/conda-forge/ogs5py

[options]
packages = find:
install_requires =
    numpy>=1.14.5
    pandas>=0.23.2
    meshio>=4
    lxml>=4
    pexpect>=4
    vtk>=9
python_requires = >=3.6
zip_safe = False

[options.packages.find]
exclude =
    tests*
    docs*

[options.extras_require]
doc =
    m2r2>=0.2.8
    numpydoc>=1.1
    sphinx>=4
    sphinx-rtd-theme>=1
show =
    mayavi
gmsh =
    pygmsh<7
test =
    pytest-cov>=3
